# daliuren

./: Dockerfile  Makefile  README.md  go.mod  go.sum  main.go  test.sh
api/: Cargo.toml  Dockerfile
api/src/: args.rs  lib.rs  main.rs  routers.rs
api/src/daliuren/: mod.rs
api/src/daliuren/http/: handlers.rs  mod.rs  request.rs  routers.rs
api/src/daliuren/shi_pan/: jigong.rs  mod.rs  sike.rs  tianjiang.rs  tianpan.rs
api/src/daliuren/shi_pan/sanchuan/: mod.rs  test.rs
api/src/handlers/: mod.rs
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment-api.yaml  deployment-ui.yaml  hpa.yaml  ingress.yaml  service-api.yaml  service-ui.yaml  serviceaccount.yaml
chart/templates/tests/: test-connection.yaml
daliuren/: daliuren.go  daliuren_test.go  jigong.go  jigong_test.go  sanchuan.go  sanchuan_test.go  sike.go  sike_test.go  tianjiang.go  tianjiang_test.go  tianpan.go  tianpan_test.go
ui/: .env.development  Dockerfile  README.md  components.d.ts  package-lock.json  package.json  vue.config.js
ui/src/: App.vue  constdef.ts  http-common.ts  http.ts  pages.json  type.ts  utils.ts
ui/src/pages/daliuren/: pan.vue
ui/src/pages/index/: index.vue
ui/src/router/: index.ts
ui/src/views/: DaLiuRenView.vue
