[package]
name = "daliuren"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ganzhiwuxing = { git = "https://github.com/wlhyl/ganzhiwuxin.git", branch = "rust" }
lunar_calendar = { git = "https://github.com/wlhyl/lunar-calendar.git", branch = "rust" }
rust-swe = { git = "https://github.com/wlhyl/rust-swe.git" }

actix-cors = "0.6.4"
actix-web = "4.3.0"
clap = { version = "4.1.4", features = ["derive"] }
dotenv = "0.15.0"
itertools = "0.10.5"
log = "0.4.17"
log4rs = "1.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

actix-web-validator = "5.0.1"
validator = { version = "0.16", features = ["derive", "unic"] }

# [dev-dependencies]
# serde_json = "1.0.93"